[project]
name = "audio_analyzer_mcp"
version = "0.1.0"
description = "MCP server for audio analysis — extract volume (dB), pitch (Hz), and speech detection from YouTube videos or local audio/video files"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "yt-dlp>=2024.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["audio_analyzer_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
